--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="field">
-          <label class="label">Description</label>
+          <label class="label">Body</label>
           <div class="control">
             <textarea
               class="textarea"
