--- a/index.html
+++ b/index.html
@@ -64,6 +64,41 @@
         <div id="recipeList">
 
         </div>
+        <br>
+        <div class="is-flex is-justify-content-center is-align-items-center">
+          <button class="button is-success m-1" id="friendsBtn">Friends</button>
+        </div>
+      </div>
+  </section>
+
+  <section id="friendReceipeListScreen" class="page is-hidden">
+    <br>
+    <div class="container is-max-desktop">
+      <div class="container is-fluid">
+        <div class="is-flex is-justify-content-space-between">
+          <h3 class="is-size-4">Your Friends</h3>
+          <button class="button is-success" id="addFriendButton">➕</button>
+        </div>
+        <br>
+        <div id="friendList">
+
+        </div>
+        <br>
+        <div class="is-flex is-justify-content-center">
+          <button id="friendCode" class="button is-success">Copy Your Friend Code</button>
+        </div>
+        <br>
+        <h3 class="is-size-5">
+          Their Recipes:
+        </h3>
+        <br>
+        <div id="friendRecipeList">
+
+        </div>
+        <br>
+        <div class="is-flex is-justify-content-center is-align-items-center">
+          <button class="button is-warning cancelRecipeBtn m-1"">Back</button>
+        </div>
       </div>
   </section>
 
@@ -77,9 +112,12 @@
         <p>By <span id="recipeUser"></span></p>
         <br>
         <div class="is-flex is-justify-content-space-between">
-          <button class="button is-warning cancelRecipeBtn">Back</button>
+          <button class="button is-warning cancelRecipeBtn">Home</button>
           <button class="button is-danger" id="deleteRecipeBtn">Delete</button>
         </div>
+        <br>
+        <br>
+        <br>
       </div>
   </section>
 
