--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="field">
           <label class="label">Secret Phrase 🤫</label>
           <div class="control">
-            <input class="input" id="userSecret" type="text" placeholder="Jump over the moon 123">
+            <input class="input" id="userSecret" type="password" placeholder="Jump over the moon 123">
           </div>
         </div>
 
